Added loading component, moved registration code from register component to bitcoin-test page, added completed page

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,5 +8,5 @@
     <ion-input type="password" required="true" [(ngModel)]="password"></ion-input>
   </ion-item>
   <ion-button expand="block" (click)="register()">Register</ion-button>
-  <p>Error: {{error}}</p>
+  <p *ngIf=(error)>Error: {{error}}</p>
 </div>
