--- a/src/app/pages/bitcoin-test/bitcoin-test.page.html
+++ b/src/app/pages/bitcoin-test/bitcoin-test.page.html
@@ -3,20 +3,23 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ testPage }}</ion-title>
+    <ion-title>Bitcoin Test - {{ testPage }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">{{ testPage }}</ion-title>
+      <ion-title size="large">Bitcoin Test - {{ testPage }}</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <app-register></app-register>
-    <strong class="capitalize">{{ testPage }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <app-loading *ngIf="loading"></app-loading>
+
+  <div id="container" *ngIf="!loading">
+    <!-- Test 1 and 2 - Registration form -->
+    <div *ngIf="testPage == 1 || testPage == 2">
+      <app-register (userRegisterEvent)="registerUser($event)" [error]="registrationError"></app-register>
+    </div>
   </div>
 </ion-content>
