Created generate key component and finished the backbone for test 3

--- a/src/app/pages/bitcoin-test/bitcoin-test.page.html
+++ b/src/app/pages/bitcoin-test/bitcoin-test.page.html
@@ -18,11 +18,14 @@
 
   <div id="container" *ngIf="!loading">
     <!-- Test 1 and 2 - Registration form -->
-    <div *ngIf="(testPage == 1 || testPage == 2) && !privateKey">
+    <div *ngIf="(testPage === 1 || testPage === 2) && !privateKey">
       <app-register (userRegisterEvent)="registerUser($event)" [error]="registrationError"></app-register>
     </div>
     <div *ngIf="privateKey">
       <app-backup-key (userBackedUpKeyEvent)="navigateTo('/completed')" [privateKey]="privateKey"></app-backup-key>
+    </div>
+    <div *ngIf="testPage === 3 && !privateKey">
+      <app-generate-key (userGeneratesKeyEvent)="generateKeys()"></app-generate-key>
     </div>
   </div>
 </ion-content>
