--- a/src/app/pages/bitcoin-test/bitcoin-test.page.html
+++ b/src/app/pages/bitcoin-test/bitcoin-test.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Bitcoin Test - {{ testPage }}</ion-title>
+    <ion-title>WIF Test - {{ testPage }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
