--- a/src/app/pages/mnemonic-test/mnemonic-test.page.html
+++ b/src/app/pages/mnemonic-test/mnemonic-test.page.html
@@ -1,9 +1,12 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>mnemonic-test</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Mnemonic Test - {{ testPage }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
 
 </ion-content>
