User can now restore keys

--- a/src/app/components/backup-key/backup-key.component.html
+++ b/src/app/components/backup-key/backup-key.component.html
@@ -1,7 +1,10 @@
 <div>
-  <ion-item>
+  <ion-item lines="full">
     <ion-label position="floating">Your private key</ion-label>
     <ion-textarea autofocus="true" value="{{privateKey}}"></ion-textarea>
   </ion-item>
+
+  <ion-button expand="block" (click)="copyToClipboard()">Copy to clipboard</ion-button>
+  <ion-button *ngIf="testPage == 1.1" expand="block" (click)="sendToEmail()">Send private key to email</ion-button>
   <ion-button expand="block" (click)="confirmBackup()">I have made a backup!</ion-button>
 </div>
