--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,9 +1,9 @@
 <div>
-  <ion-item>
+  <ion-item lines="full">
     <ion-label position="floating">Email</ion-label>
     <ion-input inputmode="email" type="email" required="true" [(ngModel)]="email"></ion-input>
   </ion-item>
-  <ion-item>
+  <ion-item lines="full">
     <ion-label position="floating">Password</ion-label>
     <ion-input type="password" required="true" [(ngModel)]="password"></ion-input>
   </ion-item>
