--- a/src/app/components/backup-key/backup-key.component.html
+++ b/src/app/components/backup-key/backup-key.component.html
@@ -6,5 +6,7 @@
 
   <ion-button expand="block" (click)="copyToClipboard()">Copy to clipboard</ion-button>
   <ion-button *ngIf="testPage == 1.1" expand="block" (click)="sendToEmail()">Send private key to email</ion-button>
-  <ion-button expand="block" (click)="confirmBackup()">I have made a backup!</ion-button>
+  <ion-button color="dark" expand="block" (click)="confirmBackup()">I have made a backup!</ion-button>
+
+  <ion-button class="skipButton" color="danger" expand="block" (click)="confirmBackup()">Skip backing up the key</ion-button>
 </div>
