updated register text

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,6 @@
 <div>
   <ion-item lines="full">
+    <p>The generated private key will be backed up to our database with your username and password</p>
     <ion-label position="floating">Email</ion-label>
     <ion-input inputmode="email" type="email" required="true" [(ngModel)]="email"></ion-input>
   </ion-item>
